--- a/Pages/Pessoas/Edit.cshtml
+++ b/Pages/Pessoas/Edit.cshtml
@@ -28,20 +28,27 @@
             <br />
             <h4>Dependentes</h4>
             <div id="dependentes">
-                @for (int i = 0; i < Model.Dependentes.Count; i++)
+                @if (Model.Dependentes != null && Model.Dependentes.Count > 0)
                 {
-                    <div class="form-group">
-                        <label asp-for="@Model.Dependentes[i].Nome" class="control-label">Nome</label>
-                        <input asp-for="@Model.Dependentes[i].Nome" class="form-control" />
-                        <span asp-validation-for="@Model.Dependentes[i].Nome" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="@Model.Dependentes[i].Idade" class="control-label">Idade</label>
-                        <input asp-for="@Model.Dependentes[i].Idade" class="form-control" />
-                        <span asp-validation-for="@Model.Dependentes[i].Idade" class="text-danger"></span>
-                    </div>
-                    <input type="hidden" asp-for="@Model.Dependentes[i].Id" />
-                    <input type="hidden" asp-for="@Model.Dependentes[i].PessoaId" value="@Model.Pessoa.Id" />
+                    @for (int i = 0; i < Model.Dependentes.Count; i++)
+                    {
+                        <div class="form-group">
+                            <label asp-for="@Model.Dependentes[i].Nome" class="control-label">Nome</label>
+                            <input asp-for="@Model.Dependentes[i].Nome" class="form-control" />
+                            <span asp-validation-for="@Model.Dependentes[i].Nome" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Dependentes[i].Idade" class="control-label">Idade</label>
+                            <input asp-for="@Model.Dependentes[i].Idade" class="form-control" />
+                            <span asp-validation-for="@Model.Dependentes[i].Idade" class="text-danger"></span>
+                        </div>
+                        <input type="hidden" asp-for="@Model.Dependentes[i].Id" />
+                        <input type="hidden" asp-for="@Model.Dependentes[i].PessoaId" value="@Model.Pessoa.Id" />
+                    }
+                }
+                else
+                {
+                    <p>Sem dependentes disponíveis.</p>
                 }
             </div>
             </br>
